finished mobile layout

--- a/MTM6201/portfolio/thanks.html
+++ b/MTM6201/portfolio/thanks.html
@@ -32,35 +32,9 @@
         <div class="container main-content">
 
             <div class="body-text contact">
-                <h1>Contact me!</h1>
-                <div>
-                    <ul>    
-                        <li>
-                            <p><u>Email</u></p>
-                            <p>adirossiter@gmail.com</p>
-                        </li>
-                        <li>
-                            <p><u>Phone Number</u></p>
-                            <P>613-555-0009</P>
-                        </li>
-                    </ul>
-                </div>
-                <div class="contact-links">
-                    <i class="im im-github"></i>
-                    <i class="im im-instagram"></i>
-                    <i class="im im-linkedin"></i>
-                </div>
-
-                <div class="contact-form">
-                    <form action="#" method="post">
-                        <fieldset class="inputs">
-                            <input id="name" placeholder="Name" type="text" required>
-                            <input id="email" placeholder="Email" type="email" required>
-                            <textarea id="Message" placeholder="Message"></textarea> 
-                            <button type="submit" class="button"><a href="thanks.html">send message!</a></button>
-                        </fieldset>
-                    </form>
-                </div>
+                <h1>Thanks!</h1>
+                <h1>I'll get back to you as soon as possible!</h1>
+                
             </div>
         </div>
 
