--- a/MTM6201/portfolio/works.html
+++ b/MTM6201/portfolio/works.html
@@ -31,7 +31,7 @@
             <a href="works/procreate.html"> <img src="images/procreate.jpg" alt="An eye coming out of a head"> <p>Procreate</p></a>
             <a href="works/photoshop.html"> <img src="images/Planetfinal.png" alt="A strange planet with a galactic language"> <p>Photoshop</p></a>
             <a href="works/illustrator.html"> <img src="images/67.png" alt="abstract shapes"> <p>Illustrator</p></a>
-            <a href="works/Webdesign.html"> <img src="https://picsum.photos/300/300" alt="An eye coming out of a head"> <p>Web/ux design</p></a>
+            <a href="works/webdesign.html"> <img src="https://picsum.photos/300/300" alt="An eye coming out of a head"> <p>Web/ux design</p></a>
         </div>
 
 
