Bootstrap This start

--- a/MTM6201/bootstrap-test/index.html
+++ b/MTM6201/bootstrap-test/index.html
@@ -37,10 +37,12 @@
       </header>
 
     <main>
-        <div id="carouselExampleSlidesOnly" class="carousel slide row-1" data-bs-ride="carousel">
+        <div id="carouselExampleSlidesOnly" class="carousel slide row-1 h-auto" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active " height="200">
-                <img src="https://picsum.photos/1080/1920" class="d-block w-100 height" alt="...">
+                <div class="container">
+                  <img src="https://picsum.photos/1080/1920" class="d-block w-100 height" alt="...">
+                </div>
               </div>
               <div class="carousel-item">
                 <img src="https://picsum.photos/1080/1920" class="d-block w-100 height" alt="...">
