--- a/MTM6201/bootstrap-this/index.html
+++ b/MTM6201/bootstrap-this/index.html
@@ -50,12 +50,14 @@
             <!-- -------------------------------------BODY --------------------------------------------- -->
 
             <section class="shadow-lg">
-                <section class="container row align-items-center mx-auto">
-                    <div class="col-6 my-auto shadow-lg rounded">
+
+
+                <section class="container row align-items-center mx-auto my-3">
+                    <div class="col-sm-12 col-lg-6 shadow-lg rounded my-3">
                         <h1>Components</h1>
                      <p>Bootstrap is fantastic for fast development of professional looking websites without knowledge of javascript, just a basic understanding of html and css is required     to start making websites. One of my favorite components in Bootstrap is the carousel, showing multiple images in one box, slowly rotating throughout, without any   knowledge of javascript required.</p>
                     </div>
-                    <div class="col-6">
+                    <div class="col-sm-12 col-lg-6">
                         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
@@ -71,6 +73,24 @@
                         </div>
                     </div>
                 </section>
+
+                <section class="container">
+                    <div class="row mx-auto h-100">
+                        <div class="col-sm-12 col-md-6 col-lg-4 my-auto">
+                            <p class="h1">
+                                Grids Grids Grids!
+                            </p>
+                            <p>Grids are super simple with bootstrap with built in responsiveness right out of the box. All you have to do is set what columns you want the item to be at the breakpoint, and the repository figures out the rest. </p>
+                        </div>
+                        <div class="col-sm-12 col-md-6 col-lg-4 my-auto">
+                            <p>If you resize you will notice that everything will move to a different position. This is all done without even touching any css.</p>
+                        </div>
+                        <div class="col-sm-12 col-lg-4 my-auto text-center">
+                            <p>This too!</p>
+                        </div>
+                    </div>
+                </section>
+
             </section>
 
 
