md page sizing, md nav fixing, about page md

--- a/MTM6201/portfolio/about.html
+++ b/MTM6201/portfolio/about.html
@@ -28,14 +28,14 @@
 
     <main>
 
-        <div class="container main-content">
+        <div class="container main-content" id="about">
             <div class="body-text">
                 <h1>Who am I?</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pharetra, urna sit amet suscipit consectetur, leo arcu rutrum ligula, non rutrum ex nulla non lorem. Cras volutpat dapibus rhoncus. Nullam tempus elementum accumsan. Proin dolor odio, mollis eu metus vel, tristique tincidunt nunc. In ex mauris, pulvinar nec auctor tincidunt, blandit vitae arcu. Aliquam semper ligula ultrices egestas varius. In ornare nibh et aliquam iaculis. Vestibulum vel suscipit est. Donec pulvinar sem velit, venenatis efficitur leo malesuada eget. Praesent dictum porttitor erat eu cursus. Phasellus consequat molestie tellus, at mollis tortor tincidunt id. Vivamus vehicula nunc non diam consequat, eu mattis sem tempor. Nunc vehicula orci nulla, nec scelerisque mi pellentesque vitae. Cras vehicula sit amet ipsum ut posuere. Integer consequat vestibulum viverra.</p>
             </div>
 
             <div class="itemization">
-                <div class="col-1">
+                <div>
                     <ul>    
                         <li><p><u>Illustrations</u></p></li>
                         <li><p>Photoshop</p></li>
@@ -50,7 +50,7 @@
                     </ul>
                 </div>
 
-                <div class="col-2">
+                <div class="item-col">
                     <ul>
                         <li><p><u>Location</u></p></li>
                         <li><p>Ottawa, Ontario</p></li>
