md size pages done

--- a/MTM6201/portfolio/contact.html
+++ b/MTM6201/portfolio/contact.html
@@ -29,26 +29,28 @@
 
     <main>
 
-        <div class="container main-content">
-
-            <div class="body-text contact">
-                <h1>Contact me!</h1>
-                <div>
-                    <ul>    
-                        <li>
-                            <p><u>Email</u></p>
-                            <p>adirossiter@gmail.com</p>
-                        </li>
-                        <li>
-                            <p><u>Phone Number</u></p>
-                            <P>613-555-0009</P>
-                        </li>
-                    </ul>
-                </div>
-                <div class="contact-links">
-                    <i class="im im-github"></i>
-                    <i class="im im-instagram"></i>
-                    <i class="im im-linkedin"></i>
+            <div class="contact container main-content">
+                <div class="body-text contact-text">
+                    <div>
+                        <ul>
+                            <li>
+                                <h1>Contact me!</h1>
+                            </li>
+                            <li>
+                                <p><u>Email</u></p>
+                                <p>adirossiter@gmail.com</p>
+                            </li>
+                            <li>
+                                <p><u>Phone Number</u></p>
+                                <P>613-555-0009</P>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="contact-links">
+                        <i class="im im-github"></i>
+                        <i class="im im-instagram"></i>
+                        <i class="im im-linkedin"></i>
+                    </div>
                 </div>
 
                 <div class="contact-form">
@@ -62,6 +64,5 @@
                     </form>
                 </div>
             </div>
-        </div>
 
     </main>
