body copy, read me update

--- a/MTM6201/portfolio/index.html
+++ b/MTM6201/portfolio/index.html
@@ -34,7 +34,7 @@
             <div class="body-text landing-text animate__animated animate__fadeInLeft animate__delay-1s">
                 <h1>Hello, I'm Adison Rossiter</h1>
                 <h2>I am a creative designer specializing in all areas of media design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam non porttitor risus. Curabitur imperdiet nulla in lacus placerat, nec condimentum sem viverra. Quisque dictum metus vel orci rhoncus, vitae porttitor purus elementum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisi. Nullam lobortis sem nulla, eget bibendum arcu lacinia ut. Donec egestas purus quis rutrum suscipit. Nam nec augue finibus, lacinia nisi eget, viverra metus. Aliquam hendrerit sit amet arcu sed tempor. Aliquam erat volutpat. Nullam quis purus consectetur, iaculis est eu, molestie orci. Etiam volutpat sapien vel porta placerat.</p>
+                <p>I am currently enrolled at Algonquin College in the Interactive Media Design program. I am looking to get more into the web development/graphic design aspects of media design, but I am open to any and all inquiries! Whether it be photography, graphic design, web design, album artwork. Whatever you need I'm willing to tackle!</p>
                 <a href="about.html" class="button animate__animated animate__fadeInLeft animate__delay-2s">learn more</a>
             </div>
 
