--- a/MTM6201/portfolio/works/photoshop.html
+++ b/MTM6201/portfolio/works/photoshop.html
@@ -33,8 +33,8 @@
 
         <div class="works container main-content">
             <div class="body-text">
-                <h1>Procreate</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pharetra, urna sit amet suscipit consectetur, leo arcu rutrum ligula, non rutrum ex nulla non lorem. Cras volutpat dapibus rhoncus. Nullam tempus elementum accumsan. Proin dolor odio, mollis eu metus vel, tristique tincidunt nunc. In ex mauris, pulvinar nec auctor tincidunt, blandit vitae arcu. Aliquam semper ligula ultrices egestas varius. In ornare nibh et aliquam iaculis. Vestibulum vel suscipit est. </p>
+                <h1>Photoshop</h1>
+                <p>I first began using photoshop as a method to add textures to my illustrator projects in order to finalize them, but eventually I learned that is way more powerful. I learned to experiment with many of the features and plugins that are available and created some (hopefully) unique pieces. </p>
             </div>
             <img src="../images/procreate.jpg" alt="An eye coming out of a head">
             <img src="../images/Planetfinal.png" alt="A strange planet with a galactic language">
