--- a/MTM6201/portfolio/works/illustrator.html
+++ b/MTM6201/portfolio/works/illustrator.html
@@ -33,8 +33,8 @@
 
         <div class="works container main-content">
             <div class="body-text">
-                <h1>Procreate</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pharetra, urna sit amet suscipit consectetur, leo arcu rutrum ligula, non rutrum ex nulla non lorem. Cras volutpat dapibus rhoncus. Nullam tempus elementum accumsan. Proin dolor odio, mollis eu metus vel, tristique tincidunt nunc. In ex mauris, pulvinar nec auctor tincidunt, blandit vitae arcu. Aliquam semper ligula ultrices egestas varius. In ornare nibh et aliquam iaculis. Vestibulum vel suscipit est. </p>
+                <h1>Illustrator</h1>
+                <p>Illustrator is my favourite program to work in, hands down. I learned how to use many different techniques to create professional designs and artworks. You can see a couple of my logo designs and poster work in here. Fantastic program! </p>
             </div>
             <img src="../images/procreate.jpg" alt="An eye coming out of a head">
             <img src="../images/Planetfinal.png" alt="A strange planet with a galactic language">
