--- a/MTM6201/portfolio/works/procreate.html
+++ b/MTM6201/portfolio/works/procreate.html
@@ -34,7 +34,7 @@
         <div class="works container main-content">
             <div class="body-text">
                 <h1>Procreate</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pharetra, urna sit amet suscipit consectetur, leo arcu rutrum ligula, non rutrum ex nulla non lorem. Cras volutpat dapibus rhoncus. Nullam tempus elementum accumsan. Proin dolor odio, mollis eu metus vel, tristique tincidunt nunc. In ex mauris, pulvinar nec auctor tincidunt, blandit vitae arcu. Aliquam semper ligula ultrices egestas varius. In ornare nibh et aliquam iaculis. Vestibulum vel suscipit est. </p>
+                <p>After spending months trying to learn to use a drawing tablet on the computer, I decided to bite the bullet and invest in an Ipad for digital illustrations, and it has helped me in numerous ways. A lot of my procreate work is heavily inspired by the psychedelic 60's style of art with a tattoo style stippling/shading that I enjoy making.</p>
             </div>
             <img src="../images/procreate.jpg" alt="An eye coming out of a head">
             <img src="../images/Planetfinal.png" alt="A strange planet with a galactic language">
