--- a/MTM6201/portfolio/works/webdesign.html
+++ b/MTM6201/portfolio/works/webdesign.html
@@ -33,8 +33,8 @@
 
         <div class="works container main-content">
             <div class="body-text">
-                <h1>Procreate</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce pharetra, urna sit amet suscipit consectetur, leo arcu rutrum ligula, non rutrum ex nulla non lorem. Cras volutpat dapibus rhoncus. Nullam tempus elementum accumsan. Proin dolor odio, mollis eu metus vel, tristique tincidunt nunc. In ex mauris, pulvinar nec auctor tincidunt, blandit vitae arcu. Aliquam semper ligula ultrices egestas varius. In ornare nibh et aliquam iaculis. Vestibulum vel suscipit est. </p>
+                <h1>Web / UX Design</h1>
+                <p>These two categories go hand in hand for me. I thoroughly the design process of focusing on the clients needs, extrapolating the website design requirements, (UI elements, image styles, website look etc.) and then using that to develop into a fully fledged website. This has helped me realize that this is a major part of what I want to do after I graduate. </p>
             </div>
             <img src="../images/procreate.jpg" alt="An eye coming out of a head">
             <img src="../images/Planetfinal.png" alt="A strange planet with a galactic language">
