--- a/MTM6201/portfolio/index.html
+++ b/MTM6201/portfolio/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,900&family=Roboto:ital,wght@0,300;0,400;1,100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Adiross</title>
 </head>
@@ -29,13 +28,13 @@
     <main>
 
         <div class="container main-content">
-            <img src="images/adi-ross.jpg" alt="Picture of Adison Rossiter" class="portrait animate__animated animate__fadeInLeft">
+            <img src="images/adi-ross.jpg" alt="Picture of Adison Rossiter" class="portrait">
 
-            <div class="body-text landing-text animate__animated animate__fadeInLeft animate__delay-1s">
+            <div class="body-text landing-text">
                 <h1>Hello, I'm Adison Rossiter</h1>
                 <h2>I am a creative designer specializing in all areas of media design</h2>
                 <p>I am currently enrolled at Algonquin College in the Interactive Media Design program. I am looking to get more into the web development/graphic design aspects of media design, but I am open to any and all inquiries! Whether it be photography, graphic design, web design, album artwork. Whatever you need I'm willing to tackle!</p>
-                <a href="about.html" class="button animate__animated animate__fadeInLeft animate__delay-2s">learn more</a>
+                <a href="about.html" class="button w-40">learn more</a>
             </div>
 
             
