--- a/MTM6201/portfolio/about.html
+++ b/MTM6201/portfolio/about.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,900&family=Roboto:ital,wght@0,300;0,400;1,100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Adiross</title>
 </head>
@@ -56,7 +55,7 @@
                         <li><p>Ottawa, Ontario</p></li>
                         <li><p><u>Email</u></p></li>
                         <li><p>Adirossiter@gmail.com</p></li>
-                        <li><p><u>Need to reach me?</u></p> <a href="about.html" class="button">contact me</a> </li>
+                        <li><p><u>Need to reach me?</u></p> <a href="contact.html" class="button">contact me</a> </li>
                     </ul>
                 </div>
             </div>
