--- a/MTM6201/portfolio/contact.html
+++ b/MTM6201/portfolio/contact.html
@@ -46,9 +46,9 @@
                         </ul>
                     </div>
                     <div class="contact-links">
-                        <i class="im im-github"></i>
-                        <i class="im im-instagram"></i>
-                        <i class="im im-linkedin"></i>
+                        <a href="https://github.com/Ross0375/ross0375.github.io"><i class="im im-github"></i></a>
+                        <a href="https://www.instagram.com/adiross.art/"><i class="im im-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/adison-rossiter-9b84a4205/"><i class="im im-linkedin"></i></a>
                     </div>
                 </div>
 
@@ -58,7 +58,7 @@
                             <input id="name" placeholder="Name" type="text" required>
                             <input id="email" placeholder="Email" type="email" required>
                             <textarea id="Message" placeholder="Message"></textarea> 
-                            <button type="submit" class="button"><a href="thanks.html">send message!</a></button>
+                            <a class="button" href="thanks.html">send message!</a>
                         </fieldset>
                     </form>
                 </div>
