--- a/MTM6201/portfolio/thanks.html
+++ b/MTM6201/portfolio/thanks.html
@@ -28,9 +28,8 @@
 
     <main>
 
-        <div class="container main-content">
-
-            <div class="body-text contact">
+        <div class="container main-content thanks-container">
+            <div class="body-text thanks">
                 <h1>Thanks!</h1>
                 <h1>I'll get back to you as soon as possible!</h1>
                 
