--- a/MTM6201/portfolio/works.html
+++ b/MTM6201/portfolio/works.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,900&family=Roboto:ital,wght@0,300;0,400;1,100&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.iconmonstr.com/1.3.0/css/iconmonstr-iconic-font.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Adiross</title>
 </head>
@@ -27,10 +28,10 @@
 
     <main>
         <div class="works container main-content">
-            <a href="works/procreate.html"> <img src="images/procreate.jpg" alt="An eye coming out of a head"> <p>Procreate</p></a>
-            <a href="works/photoshop.html"> <img src="images/Planetfinal.png" alt="A strange planet with a galactic language"> <p>Photoshop</p></a>
-            <a href="works/illustrator.html"> <img src="images/67.png" alt="abstract shapes"> <p>Illustrator</p></a>
-            <a href="works/webdesign.html"> <img src="https://picsum.photos/300/300" alt="An eye coming out of a head"> <p>Web/ux design</p></a>
+            <a href="works/procreate.html"> <img src="images/procreate.jpg" alt="An eye coming out of a head"> <p>Procreate <i class="im im-angle-right"></i></p></i></a>
+            <a href="works/photoshop.html"> <img src="images/Planetfinal.png" alt="A strange planet with a galactic language"> <p>Photoshop <i class="im im-angle-right"></i></p></a>
+            <a href="works/illustrator.html"> <img src="images/67.png" alt="abstract shapes"> <p>Illustrator <i class="im im-angle-right"></i></p></a>
+            <a href="works/webdesign.html"> <img src="https://picsum.photos/300/300" alt="An eye coming out of a head"> <p>Web/ux design <i class="im im-angle-right"></i></p></a>
         </div>
 
 
