--- a/MTM6201/portfolio/works/photoshop.html
+++ b/MTM6201/portfolio/works/photoshop.html
@@ -28,8 +28,11 @@
 
     <main>
 
+        <div class="container return">
+            <a href="../works.html"><i class="im im-angle-left"></i>return</a>
+        </div>
+
         <div class="works container main-content">
-            <a class="container return" href="../works.html"><i class="im im-angle-left"></i>return</a>
             <div class="body-text">
                 <h1>Photoshop</h1>
                 <p>I first began using photoshop as a method to add textures to my illustrator projects in order to finalize them, but eventually I learned that is way more powerful. I learned to experiment with many of the features and plugins that are available and created some (hopefully) unique pieces. </p>
@@ -37,7 +40,6 @@
             <img src="../images/procreate.jpg" alt="An eye coming out of a head">
             <img src="../images/Planetfinal.png" alt="A strange planet with a galactic language">
             <img src="../images/67.png" alt="abstract shapes">
-            <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
             <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
             <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
         </div>
