--- a/MTM6201/portfolio/works/procreate.html
+++ b/MTM6201/portfolio/works/procreate.html
@@ -37,12 +37,13 @@
                 <h1>Procreate</h1>
                 <p>After spending months trying to learn to use a drawing tablet on the computer, I decided to bite the bullet and invest in an Ipad for digital illustrations, and it has helped me in numerous ways. A lot of my procreate work is heavily inspired by the psychedelic 60's style of art with a tattoo style stippling/shading that I enjoy making.</p>
             </div>
-            <img src="../images/procreate.jpg" alt="An eye coming out of a head">
-            <img src="../images/Planetfinal.png" alt="A strange planet with a galactic language">
-            <img src="../images/67.png" alt="abstract shapes">
-            <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
-            <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
-            <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
+            <img src="../images/works/p-1.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/p-2.jpg" alt="A strange planet with a galactic language">
+            <img src="../images/works/p-3.jpg" alt="abstract shapes">
+            <img src="../images/works/p-4.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/p-5.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/p-6.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/p-7.jpg" alt="An eye coming out of a head">
         </div>
 
 
