--- a/MTM6201/portfolio/works/illustrator.html
+++ b/MTM6201/portfolio/works/illustrator.html
@@ -37,12 +37,11 @@
                 <h1>Illustrator</h1>
                 <p>Illustrator is my favourite program to work in, hands down. I learned how to use many different techniques to create professional designs and artworks. You can see a couple of my logo designs and poster work in here. Fantastic program! </p>
             </div>
-            <img src="../images/procreate.jpg" alt="An eye coming out of a head">
-            <img src="../images/Planetfinal.png" alt="A strange planet with a galactic language">
-            <img src="../images/67.png" alt="abstract shapes">
-            <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
-            <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
-            <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
+            <img src="../images/works/il-1.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/il-2.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/il-3.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/il-4.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/il-5.jpg" alt="An eye coming out of a head">
         </div>
 
 
