--- a/MTM6201/portfolio/works/photoshop.html
+++ b/MTM6201/portfolio/works/photoshop.html
@@ -37,11 +37,11 @@
                 <h1>Photoshop</h1>
                 <p>I first began using photoshop as a method to add textures to my illustrator projects in order to finalize them, but eventually I learned that is way more powerful. I learned to experiment with many of the features and plugins that are available and created some (hopefully) unique pieces. </p>
             </div>
-            <img src="../images/procreate.jpg" alt="An eye coming out of a head">
-            <img src="../images/Planetfinal.png" alt="A strange planet with a galactic language">
-            <img src="../images/67.png" alt="abstract shapes">
-            <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
-            <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
+            <img src="../images/works/ps-1.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/ps-2.jpg" alt="A strange planet with a galactic language">
+            <img src="../images/works/ps-3.jpg" alt="abstract shapes">
+            <img src="../images/works/ps-4.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/ps-5.jpg" alt="An eye coming out of a head">
         </div>
 
 
