--- a/MTM6201/portfolio/works/illustrator.html
+++ b/MTM6201/portfolio/works/illustrator.html
@@ -37,13 +37,13 @@
                 <h1>Illustrator</h1>
                 <p>Illustrator is my favourite program to work in, hands down. I learned how to use many different techniques to create professional designs and artworks. You can see a couple of my logo designs and poster work in here. Fantastic program! </p>
             </div>
-            <img src="../images/works/il-1.jpg" alt="An eye coming out of a head">
-            <img src="../images/works/il-2.jpg" alt="An eye coming out of a head">
-            <img src="../images/works/il-3.jpg" alt="An eye coming out of a head">
-            <img src="../images/works/il-4.jpg" alt="An eye coming out of a head">
-            <img src="../images/works/il-5.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/il-1.jpg" alt="A drawing man cowering in a box, looks like poster paper">
+            <img src="../images/works/il-2.jpg" alt="Abstract shapes with soft gradients">
+            <img src="../images/works/il-3.jpg" alt="Pentagon with soft gradients going around the colour spectrum">
+            <img src="../images/works/il-4.jpg" alt="Text reading Come Back in the middle of a falling hole">
+            <img src="../images/works/il-5.jpg" alt="Dancing easter island heads, the text read SAD, SAD, SAD?">
         </div>
-
-
     </main>
 </body>
+
+<!-- Validated -->
