--- a/MTM6201/portfolio/works/procreate.html
+++ b/MTM6201/portfolio/works/procreate.html
@@ -37,15 +37,17 @@
                 <h1>Procreate</h1>
                 <p>After spending months trying to learn to use a drawing tablet on the computer, I decided to bite the bullet and invest in an Ipad for digital illustrations, and it has helped me in numerous ways. A lot of my procreate work is heavily inspired by the psychedelic 60's style of art with a tattoo style stippling/shading that I enjoy making.</p>
             </div>
-            <img src="../images/works/p-1.jpg" alt="An eye coming out of a head">
-            <img src="../images/works/p-2.jpg" alt="A strange planet with a galactic language">
-            <img src="../images/works/p-3.jpg" alt="abstract shapes">
-            <img src="../images/works/p-4.jpg" alt="An eye coming out of a head">
-            <img src="../images/works/p-5.jpg" alt="An eye coming out of a head">
-            <img src="../images/works/p-6.jpg" alt="An eye coming out of a head">
-            <img src="../images/works/p-7.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/p-1.jpg" alt="Digital art of a hand hold an eyeball">
+            <img src="../images/works/p-2.jpg" alt="Digital art of a small box witha door peep hole that says my sampledelia on it">
+            <img src="../images/works/p-3.jpg" alt="Digital art of a psychedelic mushroom">
+            <img src="../images/works/p-4.jpg" alt="Digital art of a shadowy figure in a desert facing a omnipotent figure">
+            <img src="../images/works/p-5.jpg" alt="Digital art of eyes on a skewer decal on a skateboard">
+            <img src="../images/works/p-6.jpg" alt="Digital art of a eyeball appearing out of a  featureless head">
+            <img src="../images/works/p-7.jpg" alt="Digital art of a camp outside a menacing statue in the desert">
         </div>
 
 
     </main>
 </body>
+
+<!-- validated -->
