--- a/MTM6201/portfolio/works/webdesign.html
+++ b/MTM6201/portfolio/works/webdesign.html
@@ -37,14 +37,11 @@
                 <h1>Web / UX Design</h1>
                 <p>These two categories go hand in hand for me. I thoroughly the design process of focusing on the clients needs, extrapolating the website design requirements, (UI elements, image styles, website look etc.) and then using that to develop into a fully fledged website. This has helped me realize that this is a major part of what I want to do after I graduate. </p>
             </div>
-            <img src="../images/procreate.jpg" alt="An eye coming out of a head">
-            <img src="../images/Planetfinal.png" alt="A strange planet with a galactic language">
-            <img src="../images/67.png" alt="abstract shapes">
-            <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
-            <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
-            <img src="https://picsum.photos/300/300" alt="An eye coming out of a head">
+            <a href="https://ross0375.github.io/MTM6201/midterm/"><img src="../images/works/WD-1.jpg" alt="A screenshot of one of my websites, depicting a fictional music studio"></a>
+            <img src="../images/works/WD-2.jpg" alt="Picture of an app mockup on a phone.">
+            <img src="../images/works/WD-3.jpg" alt="A screenshot of a website redesign I did">
         </div>
-
-
     </main>
 </body>
+
+<!-- Validated -->
