--- a/MTM6201/portfolio/works/photoshop.html
+++ b/MTM6201/portfolio/works/photoshop.html
@@ -37,13 +37,13 @@
                 <h1>Photoshop</h1>
                 <p>I first began using photoshop as a method to add textures to my illustrator projects in order to finalize them, but eventually I learned that is way more powerful. I learned to experiment with many of the features and plugins that are available and created some (hopefully) unique pieces. </p>
             </div>
-            <img src="../images/works/ps-1.jpg" alt="An eye coming out of a head">
-            <img src="../images/works/ps-2.jpg" alt="A strange planet with a galactic language">
-            <img src="../images/works/ps-3.jpg" alt="abstract shapes">
-            <img src="../images/works/ps-4.jpg" alt="An eye coming out of a head">
-            <img src="../images/works/ps-5.jpg" alt="An eye coming out of a head">
+            <img src="../images/works/ps-1.jpg" alt="Distorted album cover depicting a shadow in front of a menacing background, the text reads ACID SLUDGE AND THE DESOLATION OF THE UNIVERSE">
+            <img src="../images/works/ps-2.jpg" alt="Highly textured and layered red square">
+            <img src="../images/works/ps-3.jpg" alt="A strange flat creature witha an eye on the head">
+            <img src="../images/works/ps-4.jpg" alt="Statues thats unidentifiable, text reads Strange Times">
+            <img src="../images/works/ps-5.jpg" alt="Abstract shapes with text that reads How did we get here">
         </div>
-
-
     </main>
 </body>
+
+<!-- Validated -->
