--- a/MTM6201/portfolio/works.html
+++ b/MTM6201/portfolio/works.html
@@ -31,7 +31,7 @@
             <a href="works/procreate.html"> <img src="images/works/p-1.jpg" alt="Digital art of a hand hold an eyeball"> <p>Procreate <i class="im im-angle-right"></i></p></a>
             <a href="works/photoshop.html"> <img src="images/works/ps-1.jpg" alt="Distorted album cover depicting a shadow in front of a menacing background, the text reads ACID SLUDGE AND THE DESOLATION OF THE UNIVERSE"> <p>Photoshop <i class="im im-angle-right"></i></p></a>
             <a href="works/illustrator.html"> <img src="images/works/il-1.jpg" alt="A drawing man cowering in a box, looks like poster paper"> <p>Illustrator <i class="im im-angle-right"></i></p></a>
-            <a href="works/webdesign.html"> <img src="images/works/WD-1.jpg" alt="A screenshot of one of my websites, depicting a fictional music studio"> <p>Web/ux design <i class="im im-angle-right"></i></p></a>
+            <a href="works/webdesign.html"> <img src="images/works/wd-1.jpg" alt="A screenshot of one of my websites, depicting a fictional music studio"> <p>Web/ux design <i class="im im-angle-right"></i></p></a>
         </div>
     </main>
 </body>
