--- a/MTM6201/portfolio/works/webdesign.html
+++ b/MTM6201/portfolio/works/webdesign.html
@@ -37,9 +37,9 @@
                 <h1>Web / UX Design</h1>
                 <p>These two categories go hand in hand for me. I thoroughly the design process of focusing on the clients needs, extrapolating the website design requirements, (UI elements, image styles, website look etc.) and then using that to develop into a fully fledged website. This has helped me realize that this is a major part of what I want to do after I graduate. </p>
             </div>
-            <a href="https://ross0375.github.io/MTM6201/midterm/"><img src="../images/works/WD-1.jpg" alt="A screenshot of one of my websites, depicting a fictional music studio"></a>
-            <img src="../images/works/WD-2.jpg" alt="Picture of an app mockup on a phone.">
-            <img src="../images/works/WD-3.jpg" alt="A screenshot of a website redesign I did">
+            <a href="https://ross0375.github.io/MTM6201/midterm/"><img src="../images/works/wd-1.jpg" alt="A screenshot of one of my websites, depicting a fictional music studio"></a>
+            <img src="../images/works/wd-2.jpg" alt="Picture of an app mockup on a phone.">
+            <img src="../images/works/wd-3.jpg" alt="A screenshot of a website redesign I did">
         </div>
     </main>
 </body>
